# cloud-fits

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.sh  pyproject.toml  setup.cfg  setup.py
cloud_fits/: __init__.py  bucket_operations.py  exceptions.py  fits-index.py  local_index.py
cloud_fits/auth/: aws.py
cloud_fits/data_types/: __init__.py  shortcuts.py  utils.py
cloud_fits/fits_index/: factory.py
cloud_fits_tests/: test-aws.py  test-bin-table.py  test-image.py  test-ranges.py  test_data_types.py
docs/: conf.py  index.rst  pythonic_api.rst  static_cloud_providers.rst
