# About pyproject.toml
# https://snarky.ca/what-the-heck-is-pyproject-toml/
# https://www.python.org/dev/peps/pep-0518/
# https://black.readthedocs.io/en/stable/pyproject_toml.html
[build-system]
requires = ["setuptools>=41.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tools.cloud_fits]
version = 0.1.0
